--- a/src/02-video.html
+++ b/src/02-video.html
@@ -19,7 +19,9 @@
       allowfullscreen
       allow="autoplay; encrypted-media"
     ></iframe>
+    
 
     <script src="js/02-video.js" type="module"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
   </body>
 </html>
